# moro8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cli.c  moro8.c  moro8.h  moro8.h.cmake  progress.txt
.github/workflows/: CI.yml  CI_docs.yml  CI_emscripten.yml
cmake/Modules/: AddCMockaTest.cmake  ConfigureChecks.cmake
docs/: CMakeLists.txt  Doxyfile.in  api.rst  changelog.rst  conf.py  index.rst  intro.rst  roadmap.rst  test_api.rst
docs/_static/css/: custom.css
docs/api/: defines.rst  functions.rst  moro8_delete.rst  moro8_equal.rst  moro8_from_buffer.rst  structures.rst  typedefs.rst
docs/api/defines/: moro8_extended_opcodes.rst  moro8_free.rst  moro8_irq_vector_address.rst  moro8_major_version.rst  moro8_malloc.rst  moro8_memory_size.rst  moro8_minimalist.rst  moro8_minor_version.rst  moro8_page_size.rst  moro8_patch_version.rst  moro8_print_buffer_size.rst  moro8_print_header_buffer_size.rst  moro8_ram_offset.rst  moro8_ram_size.rst  moro8_res_vector_address.rst  moro8_rom_offset.rst  moro8_rom_size.rst  moro8_stack_offset.rst  moro8_stack_size.rst  moro8_with_handlers.rst  moro8_with_hooks.rst  moro8_with_parser.rst
docs/api/functions/: moro8_array_memory_create.rst  moro8_array_memory_delete.rst  moro8_array_memory_get.rst  moro8_array_memory_get_dword.rst  moro8_array_memory_get_word.rst  moro8_array_memory_init.rst  moro8_array_memory_reset.rst  moro8_array_memory_set.rst  moro8_array_memory_set_dword.rst  moro8_array_memory_set_word.rst  moro8_as_buffer.rst  moro8_backup.rst  moro8_copy.rst  moro8_create.rst  moro8_delete.rst  moro8_equal.rst  moro8_get_ac.rst  moro8_get_c.rst  moro8_get_handler.rst  moro8_get_hook.rst  moro8_get_memory.rst  moro8_get_memory_bus.rst  moro8_get_memory_dword.rst  moro8_get_memory_word.rst  moro8_get_n.rst  moro8_get_pc.rst  moro8_get_register.rst  moro8_get_sp.rst  moro8_get_sr.rst  moro8_get_v.rst  moro8_get_x.rst  moro8_get_y.rst  moro8_get_z.rst  moro8_init.rst  moro8_init_hooks.rst  moro8_load.rst  moro8_memory_get.rst  moro8_memory_get_dword.rst  moro8_memory_get_word.rst  moro8_memory_reset.rst  (+29 more)
docs/api/structures/: moro8_array_memory.rst  moro8_bus.rst  moro8_hooks.rst  moro8_registers.rst  moro8_state.rst  moro8_vm.rst
docs/api/typedefs/: moro8_dword.rst  moro8_handler.rst  moro8_hook.rst  moro8_udword.rst  moro8_uword.rst  moro8_word.rst
docs/cpu/: opcodes.rst
docs/cpu/opcodes/: adc.rst  and.rst  asl.rst  bcc.rst  bcs.rst  beq.rst  bit.rst  bmi.rst  bne.rst  bpl.rst  bvc.rst  bvs.rst  clc.rst  cld.rst  clv.rst  cmp.rst  cpx.rst  cpy.rst  dea.rst  dec.rst  dex.rst  dey.rst  eor.rst  ina.rst  inc.rst  inx.rst  iny.rst  jmp.rst  jsr.rst  lda.rst  ldx.rst  ldy.rst  lsr.rst  nop.rst  ora.rst  pha.rst  php.rst  phx.rst  phy.rst  pla.rst  (+17 more)
tests/: CMakeLists.txt  test_array_memory.c  test_config.h  test_moro8.c  test_opcodes.c
tests/test_opcodes/: abs_ind_x.txt  adc_abs.txt  adc_abs_x.txt  adc_abs_y.txt  adc_imm_c.txt  adc_imm_n.txt  adc_imm_v.txt  adc_ind_x.txt  adc_ind_y.txt  adc_zp.txt  adc_zp_x.txt  and_abs.txt  and_abs_x.txt  and_abs_y.txt  and_imm.txt  and_imm_n.txt  and_imm_z.txt  and_ind_x.txt  and_ind_y.txt  and_zp.txt  and_zp_x.txt  asl_abs.txt  asl_abs_x.txt  asl_ac.txt  asl_ac_c.txt  asl_ac_n.txt  asl_zp.txt  asl_zp_x.txt  bcc.txt  bcc_n.txt  bcs.txt  beq.txt  bit_abs.txt  bit_zp.txt  bmi.txt  bne.txt  bpl.txt  bvc.txt  bvs.txt  clc.txt  (+84 more)
tests/test_opcodes/expected/: abs_ind_x.txt  adc_abs.txt  adc_abs_x.txt  adc_abs_y.txt  adc_imm_c.txt  adc_imm_n.txt  adc_imm_v.txt  adc_ind_x.txt  adc_ind_y.txt  adc_zp.txt  adc_zp_x.txt  and_abs.txt  and_abs_x.txt  and_abs_y.txt  and_imm.txt  and_imm_n.txt  and_imm_z.txt  and_ind_x.txt  and_ind_y.txt  and_zp.txt  and_zp_x.txt  asl_abs.txt  asl_abs_x.txt  asl_ac.txt  asl_ac_c.txt  asl_ac_n.txt  asl_zp.txt  asl_zp_x.txt  bcc.txt  bcc_n.txt  bcs.txt  beq.txt  bit_abs.txt  bit_zp.txt  bmi.txt  bne.txt  bpl.txt  bvc.txt  bvs.txt  clc.txt  (+84 more)
